--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.encoding.charset=UTF-8
 #-------------------------------------------------------------------
 spring.sql.init.platform=postgres
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:postgresql://10.10.20.20:5432/idesep?useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/idesep?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=1q2w3e4r*postgres
 #spring.datasource.driver-class-name=org.postgresql.Driver
